components/nonmem/src/parsing/snapshots/nonmem__parsing__parser__tests__can_parse_mod_files@nmexample.mod.snap
---
source: components/nonmem/src/parsing/parser.rs
expression: model
input_file: components/nonmem/test_data/parser/nmexample.mod
---
Model {
    problem: "RUN# Example 1 (from samp5l)",
    input_columns: [
        Included(
            "C",
        ),
        Included(
            "SET",
        ),
        Included(
            "ID",
        ),
        Included(
            "JID",
        ),
        Included(
            "TIME",
        ),
        Aliased {
            from: "CONC",
            to: "DV",
        },
        Aliased {
            from: "DOSE",
            to: "AMT",
        },
        Included(
            "RATE",
        ),
        Included(
            "EVID",
        ),
        Included(
            "MDV",
        ),
        Included(
            "CMT",
        ),
        Included(
            "CLX",
        ),
        Included(
            "V1X",
        ),
        Included(
            "QX",
        ),
        Included(
            "V2X",
        ),
        Included(
            "SDIX",
        ),
        Included(
            "SDSX",
        ),
    ],
    data: Data {
        path: "example1.csv",
        ignore: [
            Marker(
                "C",
            ),
        ],
        accept: [],
        num_records: None,
        null_value: None,
    },
    subroutines: [
        Builtin {
            name: "ADVAN3",
            tolerance: None,
        },
        Builtin {
            name: "TRANS4",
            tolerance: None,
        },
    ],
    theta_parameters: [
        Parameter {
            name: None,
            lower_bound: Some(
                0.001,
            ),
            initial_value: 2.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "[LN(CL)]",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.001,
            ),
            initial_value: 2.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "[LN(V1)]",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.001,
            ),
            initial_value: 2.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "[LN(Q)]",
            ),
            parsed_comment: None,
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.001,
            ),
            initial_value: 2.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "[LN(V2)]",
            ),
            parsed_comment: None,
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Block {
                size: 4,
            },
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.15,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[P]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[F]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.15,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[P]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[F]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[F]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.15,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[P]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[F]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[F]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[F]",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.15,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[P]",
                    ),
                    parsed_comment: None,
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.6,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "[P]",
                    ),
                    parsed_comment: None,
                },
            ],
        },
    ],
    estimations: [
        Estimation {
            method: Its,
            msfo: None,
            file: Some(
                "example1.ext",
            ),
            options: {
                "CALPHA": Some(
                    "0.05",
                ),
                "CITER": Some(
                    "10",
                ),
                "CTYPE": Some(
                    "3",
                ),
                "INTERACTION": None,
                "MAPITER": Some(
                    "0",
                ),
                "NITER": Some(
                    "500",
                ),
                "NOABORT": None,
                "NOPRIOR": Some(
                    "1",
                ),
                "NSIG": Some(
                    "2",
                ),
                "PRINT": Some(
                    "5",
                ),
                "SIGL": Some(
                    "4",
                ),
            },
        },
        Estimation {
            method: Saem,
            msfo: None,
            file: None,
            options: {
                "INTERACTION": None,
                "ISAMPLE": Some(
                    "2",
                ),
                "NBURN": Some(
                    "3000",
                ),
                "NITER": Some(
                    "500",
                ),
                "PRINT": Some(
                    "100",
                ),
                "SEED": Some(
                    "1556678",
                ),
            },
        },
        Estimation {
            method: Imp,
            msfo: None,
            file: None,
            options: {
                "EONLY": Some(
                    "1",
                ),
                "INTERACTION": None,
                "ISAMPLE": Some(
                    "3000",
                ),
                "NITER": Some(
                    "5",
                ),
                "NOPRIOR": Some(
                    "1",
                ),
                "PRINT": Some(
                    "1",
                ),
                "SIGL": Some(
                    "8",
                ),
            },
        },
        Estimation {
            method: Bayes,
            msfo: None,
            file: Some(
                "example1.txt",
            ),
            options: {
                "INTERACTION": None,
                "NBURN": Some(
                    "10000",
                ),
                "NITER": Some(
                    "10000",
                ),
                "NOPRIOR": Some(
                    "0",
                ),
                "PRINT": Some(
                    "100",
                ),
            },
        },
        Estimation {
            method: Foce,
            msfo: None,
            file: Some(
                "example1.ext",
            ),
            options: {
                "INTERACTION": None,
                "MAXEVAL": Some(
                    "9999",
                ),
                "NOABORT": None,
                "NOPRIOR": Some(
                    "1",
                ),
                "NSIG": Some(
                    "3",
                ),
                "PRINT": Some(
                    "5",
                ),
                "SIGL": Some(
                    "10",
                ),
            },
        },
    ],
    tables: [
        "example1.TAB",
        "example1.PAR",
        "example1.ETA",
    ],
    is_simulation_only: false,
}
