components/nonmem/src/parsing/snapshots/nonmem__parsing__parser__tests__can_parse_mod_files@run002.mod.snap
---
source: components/nonmem/src/parsing/parser.rs
expression: model
input_file: components/nonmem/test_data/model_paths/run002.mod
---
Model {
    problem: "Base one-compartment oral absorption model",
    input_columns: [
        Included(
            "ID",
        ),
        Included(
            "TIME",
        ),
        Included(
            "EVID",
        ),
        Included(
            "AMT",
        ),
        Included(
            "CMT",
        ),
        Included(
            "DV",
        ),
        Included(
            "MDV",
        ),
        Included(
            "WT",
        ),
        Included(
            "SEX",
        ),
    ],
    data: Data {
        path: "..\\data.csv",
        ignore: [
            Marker(
                "@",
            ),
        ],
        accept: [],
        num_records: None,
    },
    subroutines: [
        Builtin(
            "ADVAN2",
        ),
        Builtin(
            "TRANS2",
        ),
    ],
    theta_parameters: [
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 1.24,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "1. TVCL (L/hr)",
            ),
            parsed_comment: None,
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 40.86,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "2. TVV (L)",
            ),
            parsed_comment: None,
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 1.24,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "3. TVKA (1/hr)",
            ),
            parsed_comment: None,
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 0.131,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "1. ETA(CL)",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.136,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "2. ETA(V)",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "3. ETA(KA)",
                    ),
                    parsed_comment: None,
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 0.0364,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "1. Proportional error (variance, 20% CV)",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "2. Additive error (variance, 0.01 mg/L SD)",
                    ),
                    parsed_comment: None,
                },
            ],
        },
    ],
    estimations: [
        Estimation {
            method: Foce,
            msfo: None,
            file: None,
        },
    ],
    tables: [
        "run002.tab",
        "run002par.tab",
    ],
    is_simulation_only: false,
}
